force-app/main/default/objects/H8_File_Upload_Configuration_Field__mdt/H8_File_Upload_Configuration_Field__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is a child to H8 File Upload Configuration and is where you can configure default values on the ContentVersion. As an example you may have a custom field that you want to store a set value in like File_Type__c = &apos;Bank Statement&apos;</description>
    <label>H8 File Upload Configuration Field</label>
    <pluralLabel>H8 File Upload Configuration Fields</pluralLabel>
</CustomObject>