force-app/main/default/objects/H8_File_Upload_Configuration_Field__mdt/fields/Content_Version_Object__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Object__c</fullName>
    <inlineHelpText>Always select the content version object here</inlineHelpText>
    <label>Content Version Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>H8_File_Upload_Configuration_Fields</relationshipLabel>
    <relationshipName>H8_File_Upload_Configuration_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>