force-app/main/default/objects/H8_File_Upload_Configuration_Field__mdt/fields/Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field__c</fullName>
    <inlineHelpText>Select the custom field that you want to set the value on</inlineHelpText>
    <label>Custom Field</label>
    <metadataRelationshipControllingField>H8_File_Upload_Configuration_Field__mdt.Content_Version_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>H8_File_Upload_Configuration_Fields</relationshipLabel>
    <relationshipName>H8_File_Upload_Configuration_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>