force-app/main/default/objects/H8_File_Upload_Configuration_Field__mdt/fields/H8_File_Upload_Configuration__c.field-meta.xml
<CustomField>
    <fullName>H8_File_Upload_Configuration__c</fullName>
    <inlineHelpText>This is the configuration that the field is related to</inlineHelpText>
    <label>H8 File Upload Configuration</label>
    <referenceTo>H8_File_Upload_Configuration__mdt</referenceTo>
    <relationshipLabel>H8 File Upload Configuration Fields</relationshipLabel>
    <relationshipName>H8_File_Upload_Configuration_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>